# martian-miner

./: CMakeLists.txt  README.md
assets/: gizmos.pix2d  map1.tmx  map2.tmx  mars_tileset_w_background.tsx  martianValleys.tmx  martianValleys2.tmx  spriteSheet.pix2d  spriteSheet.tsx
assets/animations/: asteroid_animations.xml  box.pix2d  box_animations.xml  explosion_animations.xml  lander_animations.xml
src/: Game.cpp  Game.h  Map.cpp  Map.h  main.cpp
src/ecs/: Component.h  ComponentType.h  Entity.h  EventManager.h  World.cpp  World.h
src/ecs/events/: BaseEvent.h  EventManager.h
src/ecs/system/: AccelerationSystem.h  AnimationClip.h  AnimationSystem.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  EventResponseSystem.cpp  EventResponseSystem.h  HUDSystem.h  KeyboardInputSystem.cpp  KeyboardInputSystem.h  MouseInputSystem.cpp  MouseInputSystem.h  MovementSystem.h  PreRenderSystem.h  RenderSystem.h  ScoringSystem.cpp  ScoringSystem.h  SpawnTimerSystem.h  TimerSystem.h  UIRenderSystem.h  VelocitySystem.h
src/managers/: AssetManager.cpp  AssetManager.h  AudioEventQueue.h  AudioManager.cpp  AudioManager.h  BaseEvent.h  EventManager.h  Scene.cpp  Scene.h  SceneManager.h  TextureManager.cpp  TextureManager.h
src/scenes/: LandingScene.cpp  LandingScene.h  MainMenuScene.cpp  MainMenuScene.h
src/utils/: Collision.cpp  Collision.h  RenderUtils.h  Vector2D.cpp  Vector2D.h
